force-app/main/default/objects/LT_Driver__c/LT_Driver__c.object-meta.xml
<CustomObject>
    <description>Motorista da malha LogiTrack (Last Mile e First Mile). Categorias: TAC, MEI, ETC, Coleta e Mini Transferência.</description>
    <label>Motorista</label>
    <nameField>
        <label>Nome do Motorista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motoristas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>