force-app/main/default/objects/LT_Driver__c/fields/LT_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>LT_Category_Code__c</fullName>
    <description>Sigla da categoria do motorista derivada do Record Type.</description>
    <label>Sigla da Categoria</label>
    <formula>IF(RecordType.DeveloperName = "LT_TAC", "TAC", IF(RecordType.DeveloperName = "LT_MEI", "MEI", IF(RecordType.DeveloperName = "LT_ETC", "ETC", IF(RecordType.DeveloperName = "LT_MR", "MR", IF(RecordType.DeveloperName = "LT_Coleta", "Coleta", "")))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>