force-app/main/default/objects/LT_Driver__c/fields/LT_CNH_Category__c.field-meta.xml
<CustomField>
    <fullName>LT_CNH_Category__c</fullName>
    <description>Categoria da habilitacao do motorista.</description>
    <inlineHelpText>Selecione a categoria da CNH.</inlineHelpText>
    <label>Categoria da CNH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>