force-app/main/default/objects/LT_Driver__c/fields/LT_CNH_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LT_CNH_Expiration__c</fullName>
    <description>Data de validade da CNH. Motorista com CNH vencida nao pode ser ativado.</description>
    <label>Validade da CNH</label>
    <type>Date</type>
</CustomField>