force-app/main/default/objects/LT_Driver__c/fields/LT_CNH_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_CNH_Number__c</fullName>
    <description>Numero de registro da Carteira Nacional de Habilitacao.</description>
    <label>Numero da CNH</label>
    <length>15</length>
    <type>Text</type>
</CustomField>