force-app/main/default/objects/LT_Driver__c/fields/LT_CNH_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_CNH_Status__c</fullName>
    <description>Situacao calculada da CNH conforme a data de validade.</description>
    <label>Situacao da CNH</label>
    <formula>IF(ISBLANK(LT_CNH_Expiration__c), "Sem CNH cadastrada", IF(LT_CNH_Expiration__c &lt; TODAY(), "Vencida", IF(LT_CNH_Expiration__c &lt;= TODAY() + 30, "A vencer (30 dias)", "Vigente")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>