force-app/main/default/objects/LT_Driver__c/fields/LT_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>LT_CNPJ__c</fullName>
    <description>CNPJ do motorista (obrigatorio para MEI e ETC).</description>
    <inlineHelpText>Informe o CNPJ no formato 00.000.000/0000-00. Obrigatorio para MEI e ETC.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>