force-app/main/default/objects/LT_Driver__c/fields/LT_CPF__c.field-meta.xml
<CustomField>
    <fullName>LT_CPF__c</fullName>
    <description>Cadastro de Pessoa Fisica do motorista.</description>
    <externalId>true</externalId>
    <inlineHelpText>Informe o CPF no formato 000.000.000-00.</inlineHelpText>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>