force-app/main/default/objects/LT_Driver__c/fields/LT_Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Code__c</fullName>
    <description>Identificacao usada na operacao: sigla da categoria + nome (ex.: TAC ADRIANO SOUZA).</description>
    <label>Identificacao do Motorista</label>
    <formula>IF(AND(LEN(LT_Category_Code__c) &gt; 0, LT_Category_Code__c &lt;&gt; "Coleta"), LT_Category_Code__c &amp; " " &amp; UPPER(Name), UPPER(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>