force-app/main/default/objects/LT_Driver__c/fields/LT_Driver_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Status__c</fullName>
    <description>Situacao cadastral e operacional do motorista.</description>
    <inlineHelpText>Somente motoristas Ativos podem receber rotas e romaneios.</inlineHelpText>
    <label>Status do Motorista</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Cadastro</fullName>
                <default>true</default>
                <label>Em Cadastro</label>
            </value>
            <value>
                <fullName>Documentacao Pendente</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Suspenso</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Desligado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>