force-app/main/default/objects/LT_Driver__c/fields/LT_Lead_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Lead_Driver__c</fullName>
    <description>Motorista ETC principal ao qual este motorista auxiliar esta subordinado nas entregas.</description>
    <inlineHelpText>Preencha apenas para motoristas auxiliares que acompanham um ETC principal.</inlineHelpText>
    <label>Motorista Principal (ETC)</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Motoristas Auxiliares</relationshipLabel>
    <relationshipName>LT_Sub_Drivers</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O Motorista Principal deve ser um motorista da categoria ETC.</errorMessage>
        <filterItems>
            <field>LT_Driver__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LT_ETC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>