force-app/main/default/objects/LT_Driver__c/fields/LT_Min_Packages_Per_Trip__c.field-meta.xml
<CustomField>
    <fullName>LT_Min_Packages_Per_Trip__c</fullName>
    <description>Quantidade minima de pacotes por frete conforme a categoria (0 = sem minimo).</description>
    <label>Minimo de Pacotes por Frete</label>
    <formula>IF(RecordType.DeveloperName = "LT_TAC", 100, IF(RecordType.DeveloperName = "LT_ETC", 300, IF(RecordType.DeveloperName = "LT_MR", 300, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>