force-app/main/default/objects/LT_Driver__c/fields/LT_Notes__c.field-meta.xml
<CustomField>
    <fullName>LT_Notes__c</fullName>
    <description>Observacoes gerais sobre o motorista.</description>
    <label>Observacoes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>