force-app/main/default/objects/LT_Driver__c/fields/LT_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Onboarding_Date__c</fullName>
    <description>Data em que o motorista foi ativado e comecou a operar.</description>
    <label>Data de Ativacao</label>
    <type>Date</type>
</CustomField>