force-app/main/default/objects/LT_Driver__c/fields/LT_Operating_Partner__c.field-meta.xml
<CustomField>
    <fullName>LT_Operating_Partner__c</fullName>
    <description>Parceiro operacional (franquia) responsavel pelo motorista, quando ele opera por uma base franqueada.</description>
    <label>Parceiro Operacional</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Motoristas</relationshipLabel>
    <relationshipName>LT_Drivers</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selecione uma conta do tipo Parceiro Operacional.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LT_Operating_Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>