force-app/main/default/objects/LT_Driver__c/fields/LT_Payment_Model__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Model__c</fullName>
    <description>Coleta (First Mile) e Mini Transferencia sao pagos por Romaneio; demais categorias por Frete.</description>
    <label>Modelo de Pagamento</label>
    <formula>IF(OR(RecordType.DeveloperName = "LT_Coleta", RecordType.DeveloperName = "LT_MR"), "Romaneio (por pacote)", "Frete (por rota)")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>