force-app/main/default/objects/LT_Driver__c/fields/LT_Pending_Documents__c.field-meta.xml
<CustomField>
    <fullName>LT_Pending_Documents__c</fullName>
    <description>Quantidade de documentos do motorista ainda nao verificados.</description>
    <label>Documentos Pendentes</label>
    <summaryForeignKey>LT_Driver_Document__c.LT_Driver__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>LT_Driver_Document__c.LT_Verified__c</field>
        <operation>equals</operation>
        <value>false</value>
    </summaryFilterItems>
    <type>Summary</type>
</CustomField>