force-app/main/default/objects/LT_Driver__c/fields/LT_Phone__c.field-meta.xml
<CustomField>
    <fullName>LT_Phone__c</fullName>
    <description>Telefone de contato do motorista.</description>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>