force-app/main/default/objects/LT_Driver__c/fields/LT_PIX_Key__c.field-meta.xml
<CustomField>
    <fullName>LT_PIX_Key__c</fullName>
    <description>Chave PIX para pagamento de fretes e romaneios.</description>
    <label>Chave PIX</label>
    <length>80</length>
    <type>Text</type>
</CustomField>