force-app/main/default/objects/LT_Driver__c/fields/LT_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Termination_Date__c</fullName>
    <description>Data de desligamento do motorista.</description>
    <label>Data de Desligamento</label>
    <type>Date</type>
</CustomField>