force-app/main/default/objects/LT_Driver__c/recordTypes/LT_Coleta.recordType-meta.xml
<RecordType>
    <fullName>LT_Coleta</fullName>
    <active>true</active>
    <description>Motorista de coleta / First Mile. Pago via Romaneio pela quantidade de pacotes coletados.</description>
    <label>Coleta (First Mile)</label>
</RecordType>