force-app/main/default/objects/LT_Driver__c/recordTypes/LT_ETC.recordType-meta.xml
<RecordType>
    <fullName>LT_ETC</fullName>
    <active>true</active>
    <description>Motorista ETC (Empresa de Transporte de Cargas). Veiculo grande. 300 a 3.000 pacotes/dia. Pode ter motoristas auxiliares.</description>
    <label>ETC</label>
</RecordType>