force-app/main/default/objects/LT_Driver__c/recordTypes/LT_MEI.recordType-meta.xml
<RecordType>
    <fullName>LT_MEI</fullName>
    <active>true</active>
    <description>Motorista MEI. Possui CNPJ. Qualquer tipo de veiculo. Maximo de 80 pacotes por frete.</description>
    <label>MEI</label>
</RecordType>