force-app/main/default/objects/LT_Driver__c/recordTypes/LT_MR.recordType-meta.xml
<RecordType>
    <fullName>LT_MR</fullName>
    <active>true</active>
    <description>Motorista de Mini Transferencia. Leva cargas para cidades distantes (mais de 60 km da base). Pago via Romaneio.</description>
    <label>Mini Transferencia (MR)</label>
</RecordType>