force-app/main/default/objects/LT_Driver__c/recordTypes/LT_TAC.recordType-meta.xml
<RecordType>
    <fullName>LT_TAC</fullName>
    <active>true</active>
    <description>Motorista TAC (Transportador Autonomo de Cargas). Exige veiculo com porta-malas amplo. Minimo de 100 pacotes por frete.</description>
    <label>TAC</label>
</RecordType>