force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_Active_Requires_Base.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_Active_Requires_Base</fullName>
    <active>true</active>
    <description>Motorista Ativo precisa estar vinculado a uma base.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Driver_Status__c, "Ativo"), ISBLANK(LT_Home_Base__c))</errorConditionFormula>
    <errorDisplayField>LT_Home_Base__c</errorDisplayField>
    <errorMessage>Vincule o motorista a uma base antes de ativar.</errorMessage>
</ValidationRule>