force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_Lead_Not_Self.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_Lead_Not_Self</fullName>
    <active>true</active>
    <description>O motorista nao pode ser o proprio motorista principal.</description>
    <errorConditionFormula>LT_Lead_Driver__c = Id</errorConditionFormula>
    <errorDisplayField>LT_Lead_Driver__c</errorDisplayField>
    <errorMessage>Um motorista nao pode ser o proprio Motorista Principal.</errorMessage>
</ValidationRule>