force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_MEI_ETC_Require_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_MEI_ETC_Require_CNPJ</fullName>
    <active>true</active>
    <description>Motoristas MEI e ETC precisam ter CNPJ cadastrado.</description>
    <errorConditionFormula>AND(OR(RecordType.DeveloperName = "LT_MEI", RecordType.DeveloperName = "LT_ETC"), ISBLANK(LT_CNPJ__c))</errorConditionFormula>
    <errorDisplayField>LT_CNPJ__c</errorDisplayField>
    <errorMessage>Motoristas MEI e ETC precisam ter o CNPJ cadastrado.</errorMessage>
</ValidationRule>