force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_Terminated_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_Terminated_Requires_Date</fullName>
    <active>true</active>
    <description>Motorista Desligado precisa da data de desligamento.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Driver_Status__c, "Desligado"), ISBLANK(LT_Termination_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Termination_Date__c</errorDisplayField>
    <errorMessage>Informe a Data de Desligamento.</errorMessage>
</ValidationRule>