force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_Validate_CNPJ_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_Validate_CNPJ_Format</fullName>
    <active>true</active>
    <description>Valida a mascara do CNPJ (00.000.000/0000-00).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_CNPJ__c)), NOT(REGEX(LT_CNPJ__c, "^[0-9]{2}[.][0-9]{3}[.][0-9]{3}/[0-9]{4}-[0-9]{2}$")))</errorConditionFormula>
    <errorDisplayField>LT_CNPJ__c</errorDisplayField>
    <errorMessage>Informe o CNPJ no formato 00.000.000/0000-00.</errorMessage>
</ValidationRule>