force-app/main/default/objects/LT_Driver__c/validationRules/LT_Driver_Validate_CPF_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Driver_Validate_CPF_Format</fullName>
    <active>true</active>
    <description>Valida a mascara do CPF (000.000.000-00).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_CPF__c)), NOT(REGEX(LT_CPF__c, "^[0-9]{3}[.][0-9]{3}[.][0-9]{3}-[0-9]{2}$")))</errorConditionFormula>
    <errorDisplayField>LT_CPF__c</errorDisplayField>
    <errorMessage>Informe o CPF no formato 000.000.000-00.</errorMessage>
</ValidationRule>