force-app/main/default/objects/LT_Driver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LT_Driver_Code__c</columns>
    <columns>LT_Category_Code__c</columns>
    <columns>LT_Driver_Status__c</columns>
    <columns>LT_Home_Base__c</columns>
    <columns>LT_CNH_Status__c</columns>
    <columns>LT_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>