force-app/main/default/objects/LT_Driver__c/listViews/Ativos.listView-meta.xml
<ListView>
    <fullName>Ativos</fullName>
    <columns>LT_Driver_Code__c</columns>
    <columns>LT_Category_Code__c</columns>
    <columns>LT_Home_Base__c</columns>
    <columns>LT_CNH_Status__c</columns>
    <columns>LT_Payment_Model__c</columns>
    <columns>LT_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Driver_Status__c</field>
        <operation>equals</operation>
        <value>Ativo</value>
    </filters>
    <label>Motoristas Ativos</label>
</ListView>