force-app/main/default/objects/LT_Driver__c/listViews/CNH_Pendente.listView-meta.xml
<ListView>
    <fullName>CNH_Pendente</fullName>
    <columns>LT_Driver_Code__c</columns>
    <columns>LT_Category_Code__c</columns>
    <columns>LT_Driver_Status__c</columns>
    <columns>LT_CNH_Expiration__c</columns>
    <columns>LT_CNH_Status__c</columns>
    <columns>LT_Home_Base__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_CNH_Status__c</field>
        <operation>contains</operation>
        <value>Vencida,A vencer</value>
    </filters>
    <label>CNH Vencida ou a Vencer</label>
</ListView>